worker-macros/tests/ui/scheduled-wrong-param-count.rs
use worker_macros::event;

#[event(scheduled)]
async fn scheduled() {}

fn main() {}
